--- a/index.html
+++ b/index.html
@@ -72,8 +72,6 @@ input[type="date"]{
   align-items:center;
 }
 
-.streak{font-size:18px;}
-
 .dayCard{
   background:#111;
   padding:12px;
@@ -125,11 +123,8 @@ input[type="date"]{
 <!-- DIA -->
 <div id="dayPage" class="page">
 <h2 id="dayTitle"></h2>
-
 <input type="date" id="dayDate">
-
 <div id="exerciseList"></div>
-
 <button onclick="saveDay()">Guardar Día</button>
 <button onclick="showPage('menu')">Volver</button>
 </div>
@@ -152,6 +147,37 @@ input[type="date"]{
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+<!-- 🔥 FIREBASE -->
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import {
+  getFirestore,
+  collection,
+  addDoc,
+  getDocs,
+  deleteDoc,
+  doc
+} from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyDE63KkdHA69nKOsguV4HHHpev74U4EGpg",
+  authDomain: "gym-e61c4.firebaseapp.com",
+  projectId: "gym-e61c4",
+  storageBucket: "gym-e61c4.firebasestorage.app",
+  messagingSenderId: "613694978439",
+  appId: "1:613694978439:web:0c370ef36bcec8329a7b22",
+  measurementId: "G-TY04V158X7"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.db=db;
+window.fb={collection,addDoc,getDocs,deleteDoc,doc};
+
+</script>
 
 <script>
 let currentProfile=null;
@@ -180,12 +206,12 @@ updateStreak();
 showPage("menu");
 }
 
-function getData(){
-return JSON.parse(localStorage.getItem("gym_"+currentProfile)||"[]");
-}
-
-function saveData(data){
-localStorage.setItem("gym_"+currentProfile,JSON.stringify(data));
+/* 🔥 DATA DESDE FIREBASE */
+async function getData(){
+const snap=await fb.getDocs(fb.collection(db,"workouts"));
+let data=[];
+snap.forEach(d=>data.push({...d.data(),id:d.id}));
+return data.filter(d=>d.profile===currentProfile);
 }
 
 /* ABRIR DIA */
@@ -193,35 +219,30 @@ function openDay(n){
 currentDay=n;
 
 const today=new Date().toISOString().split("T")[0];
-document.getElementById("dayDate").value=today;
-
+dayDate.value=today;
 updateDayTitle();
 
-const list=document.getElementById("exerciseList");
-list.innerHTML="";
+exerciseList.innerHTML="";
 
 routines[n].forEach((ex,i)=>{
-list.innerHTML+=`
+exerciseList.innerHTML+=`
 <p>${ex}
- KG <input id="kg${i}">
- Reps <input id="rep${i}">
+KG <input id="kg${i}">
+Reps <input id="rep${i}">
 </p>`;
 });
 
 showPage("dayPage");
 }
 
-document.getElementById("dayDate").addEventListener("change",updateDayTitle);
+dayDate.addEventListener("change",updateDayTitle);
 
 function updateDayTitle(){
-const date=document.getElementById("dayDate").value;
-document.getElementById("dayTitle").innerText=`Dia ${currentDay} ${date}`;
+dayTitle.innerText=`Dia ${currentDay} ${dayDate.value}`;
 }
 
-/* GUARDAR */
-function saveDay(){
-
-const selectedDate=document.getElementById("dayDate").value;
+/* GUARDAR NUBE */
+async function saveDay(){
 
 const exercises=routines[currentDay].map((ex,i)=>({
 name:ex,
@@ -229,41 +250,41 @@ kg:document.getElementById("kg"+i).value||0,
 reps:document.getElementById("rep"+i).value||0
 }));
 
-const data=getData();
-
-data.push({
+await fb.addDoc(
+fb.collection(db,"workouts"),
+{
+profile:currentProfile,
 day:currentDay,
-date:selectedDate,
+date:dayDate.value,
 exercises
 });
 
-saveData(data);
 updateStreak();
-
-alert("Guardado ✅");
+alert("Guardado en la nube ☁️✅");
 showPage("menu");
 }
 
 /* RACHA */
-function updateStreak(){
-const data=getData();
-document.getElementById("streak").innerText="🔥 "+data.length;
+async function updateStreak(){
+const data=await getData();
+streak.innerText="🔥 "+data.length;
 }
 
 /* DIAS */
-function openDias(){
-loadDays();
+async function openDias(){
+await loadDays();
 showPage("dias");
 }
 
-function loadDays(){
-const container=document.getElementById("daysList");
-container.innerHTML="";
-document.getElementById("dayDetail").style.display="none";
+async function loadDays(){
 
-const data=getData();
+daysList.innerHTML="";
+dayDetail.style.display="none";
 
-data.forEach((d,index)=>{
+const data=await getData();
+
+data.forEach(d=>{
+
 const card=document.createElement("div");
 card.className="dayCard";
 card.innerHTML=`Dia ${d.day} - ${d.date}`;
@@ -273,49 +294,48 @@ card.onclick=()=>showDetail(d);
 const del=document.createElement("button");
 del.className="deleteBtn";
 del.innerText="Eliminar";
-del.onclick=(e)=>{
+del.onclick=async(e)=>{
 e.stopPropagation();
-data.splice(index,1);
-saveData(data);
+await fb.deleteDoc(fb.doc(db,"workouts",d.id));
 loadDays();
 updateStreak();
 };
 
 card.appendChild(del);
-container.appendChild(card);
+daysList.appendChild(card);
 });
 }
 
 /* DETALLE */
 function showDetail(d){
-const box=document.getElementById("dayDetail");
-box.style.display="block";
+dayDetail.style.display="block";
 
 let html=`<h3>Dia ${d.day} - ${d.date}</h3>`;
 d.exercises.forEach(ex=>{
 html+=`<p>${ex.name} — ${ex.kg} KG / ${ex.reps} reps</p>`;
 });
 
-box.innerHTML=html;
+dayDetail.innerHTML=html;
 }
 
 /* PROGRESO */
 let chart=null;
 
-function openProgreso(){
-drawChart();
+async function openProgreso(){
+await drawChart();
 showPage("progreso");
 }
 
-function drawChart(){
-const data=getData();
+async function drawChart(){
+
+const data=await getData();
 
 const labels=data.map(d=>d.date);
 const values=data.map((_,i)=>i+1);
 
 if(chart) chart.destroy();
 
-chart=new Chart(document.getElementById("chart"),{
+chart=new Chart(chart,{
 type:"line",
 data:{
 labels,
